--- a/Helldivers Companion.xcodeproj/xcshareddata/xcschemes/Helldivers Companion Watch WidgetsExtension.xcscheme
+++ b/Helldivers Companion.xcodeproj/xcshareddata/xcschemes/Helldivers Companion Watch WidgetsExtension.xcscheme
@@ -1,12 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1530"
-   version = "1.7">
+   wasCreatedForAppExtension = "YES"
+   version = "2.0">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES"
       buildArchitectures = "Automatic">
       <BuildActionEntries>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "7C3DE9762BA80B3D00C95B84"
+               BuildableName = "Helldivers Companion Watch WidgetsExtension.appex"
+               BlueprintName = "Helldivers Companion Watch WidgetsExtension"
+               ReferencedContainer = "container:Helldivers Companion.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
          <BuildActionEntry
             buildForTesting = "YES"
             buildForRunning = "YES"
@@ -46,17 +61,27 @@
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
-      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
-      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      selectedDebuggerIdentifier = ""
+      selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
       launchStyle = "0"
+      askForAppToLaunch = "Yes"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES"
-      notificationPayloadFile = "PushNotificationPayload.apns">
+      launchAutomaticallySubstyle = "2">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "7C3DE9762BA80B3D00C95B84"
+            BuildableName = "Helldivers Companion Watch WidgetsExtension.appex"
+            BlueprintName = "Helldivers Companion Watch WidgetsExtension"
+            ReferencedContainer = "container:Helldivers Companion.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "7C587F432BA6DBB400C66643"
@@ -64,7 +89,24 @@
             BlueprintName = "Helldivers Companion Watch Edition Watch App"
             ReferencedContainer = "container:Helldivers Companion.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "_XCWidgetKind"
+            value = ""
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "_XCWidgetDefaultView"
+            value = "timeline"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "_XCWidgetFamily"
+            value = "systemMedium"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -76,9 +118,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "7C587F432BA6DBB400C66643"
-            BuildableName = "Helldivers Companion Watch Edition Watch App.app"
-            BlueprintName = "Helldivers Companion Watch Edition Watch App"
+            BlueprintIdentifier = "7C3DE9762BA80B3D00C95B84"
+            BuildableName = "Helldivers Companion Watch WidgetsExtension.appex"
+            BlueprintName = "Helldivers Companion Watch WidgetsExtension"
             ReferencedContainer = "container:Helldivers Companion.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
