--- a/Helldivers Companion.xcodeproj/xcshareddata/xcschemes/Helldivers Companion WidgetsExtension.xcscheme
+++ b/Helldivers Companion.xcodeproj/xcshareddata/xcschemes/Helldivers Companion WidgetsExtension.xcscheme
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1530"
-   version = "1.7">
+   wasCreatedForAppExtension = "YES"
+   version = "2.0">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES"
@@ -15,9 +16,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "7C587F432BA6DBB400C66643"
-               BuildableName = "Helldivers Companion Watch Edition Watch App.app"
-               BlueprintName = "Helldivers Companion Watch Edition Watch App"
+               BlueprintIdentifier = "7CC0AE6E2BA7F31400802D9F"
+               BuildableName = "Helldivers Companion WidgetsExtension.appex"
+               BlueprintName = "Helldivers Companion WidgetsExtension"
                ReferencedContainer = "container:Helldivers Companion.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -46,39 +47,59 @@
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
-      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
-      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      selectedDebuggerIdentifier = ""
+      selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
       launchStyle = "0"
+      askForAppToLaunch = "Yes"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES"
-      notificationPayloadFile = "PushNotificationPayload.apns">
+      launchAutomaticallySubstyle = "2">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "7C587F432BA6DBB400C66643"
-            BuildableName = "Helldivers Companion Watch Edition Watch App.app"
-            BlueprintName = "Helldivers Companion Watch Edition Watch App"
+            BlueprintIdentifier = "7C0C99472BA2BA8F00CF7C91"
+            BuildableName = "Helldivers Companion.app"
+            BlueprintName = "Helldivers Companion"
             ReferencedContainer = "container:Helldivers Companion.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "_XCWidgetKind"
+            value = ""
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "_XCWidgetDefaultView"
+            value = "timeline"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "_XCWidgetFamily"
+            value = "systemMedium"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      debugDocumentVersioning = "YES">
+      debugDocumentVersioning = "YES"
+      askForAppToLaunch = "Yes"
+      launchAutomaticallySubstyle = "2">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "7C587F432BA6DBB400C66643"
-            BuildableName = "Helldivers Companion Watch Edition Watch App.app"
-            BlueprintName = "Helldivers Companion Watch Edition Watch App"
+            BlueprintIdentifier = "7C0C99472BA2BA8F00CF7C91"
+            BuildableName = "Helldivers Companion.app"
+            BlueprintName = "Helldivers Companion"
             ReferencedContainer = "container:Helldivers Companion.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
