--- a/Helldivers Companion.xcodeproj/xcshareddata/xcschemes/Helldivers Companion.xcscheme
+++ b/Helldivers Companion.xcodeproj/xcshareddata/xcschemes/Helldivers Companion.xcscheme
@@ -59,6 +59,9 @@
             ReferencedContainer = "container:Helldivers Companion.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <StoreKitConfigurationFileReference
+         identifier = "../../War Monitor for Helldivers 2 TipJar.storekit">
+      </StoreKitConfigurationFileReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
