--- a/Helldivers Companion.xcodeproj/xcshareddata/xcschemes/Helldivers Companion Watch Edition Watch App.xcscheme
+++ b/Helldivers Companion.xcodeproj/xcshareddata/xcschemes/Helldivers Companion Watch Edition Watch App.xcscheme
@@ -53,7 +53,8 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
-      allowLocationSimulation = "YES">
+      allowLocationSimulation = "YES"
+      notificationPayloadFile = "PushNotificationPayload.apns">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
@@ -64,6 +65,9 @@
             ReferencedContainer = "container:Helldivers Companion.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <StoreKitConfigurationFileReference
+         identifier = "../../War Monitor for Helldivers 2 TipJar.storekit">
+      </StoreKitConfigurationFileReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
