- Added circular progress to planets on map - Testing with liberation rate - Fixed nav issue on map view - Added fs sinclair regular font

--- a/Helldivers Companion Major Order Watch Widget/Info.plist
+++ b/Helldivers Companion Major Order Watch Widget/Info.plist
@@ -10,6 +10,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>FS Sinclair Bold.otf</string>
+		<string>FS Sinclair Regular.otf</string>
 	</array>
 </dict>
 </plist>
