--- a/Helldivers-Companion-Watch-Edition-Watch-App-Info.plist
+++ b/Helldivers-Companion-Watch-Edition-Watch-App-Info.plist
@@ -6,6 +6,7 @@
 	<false/>
 	<key>UIAppFonts</key>
 	<array>
+		<string>FS Sinclair Regular.otf</string>
 		<string>FS Sinclair Bold.otf</string>
 	</array>
 </dict>
