--- a/Helldivers Companion.xcodeproj/xcshareddata/xcschemes/Stratagem Hero High Score WidgetExtension.xcscheme
+++ b/Helldivers Companion.xcodeproj/xcshareddata/xcschemes/Stratagem Hero High Score WidgetExtension.xcscheme
@@ -16,9 +16,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "7C8C5F4C2BAF0AD100C4FBD2"
-               BuildableName = "Helldivers Companion Major Order Watch WidgetExtension.appex"
-               BlueprintName = "Helldivers Companion Major Order Watch WidgetExtension"
+               BlueprintIdentifier = "7CA240B12BCA33FC007F685C"
+               BuildableName = "Stratagem Hero High Score WidgetExtension.appex"
+               BlueprintName = "Stratagem Hero High Score WidgetExtension"
                ReferencedContainer = "container:Helldivers Companion.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -33,20 +33,6 @@
                BlueprintIdentifier = "7C0C99472BA2BA8F00CF7C91"
                BuildableName = "Helldivers Companion.app"
                BlueprintName = "Helldivers Companion"
-               ReferencedContainer = "container:Helldivers Companion.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "7C587F432BA6DBB400C66643"
-               BuildableName = "Helldivers Companion Watch Edition Watch App.app"
-               BlueprintName = "Helldivers Companion Watch Edition Watch App"
                ReferencedContainer = "container:Helldivers Companion.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -75,21 +61,12 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "7C8C5F4C2BAF0AD100C4FBD2"
-            BuildableName = "Helldivers Companion Major Order Watch WidgetExtension.appex"
-            BlueprintName = "Helldivers Companion Major Order Watch WidgetExtension"
-            ReferencedContainer = "container:Helldivers Companion.xcodeproj">
-         </BuildableReference>
-      </BuildableProductRunnable>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
             BlueprintIdentifier = "7C0C99472BA2BA8F00CF7C91"
             BuildableName = "Helldivers Companion.app"
             BlueprintName = "Helldivers Companion"
             ReferencedContainer = "container:Helldivers Companion.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
       <EnvironmentVariables>
          <EnvironmentVariable
             key = "_XCWidgetKind"
@@ -103,7 +80,7 @@
          </EnvironmentVariable>
          <EnvironmentVariable
             key = "_XCWidgetFamily"
-            value = "systemMedium"
+            value = "systemSmall"
             isEnabled = "YES">
          </EnvironmentVariable>
       </EnvironmentVariables>
@@ -113,14 +90,16 @@
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      debugDocumentVersioning = "YES">
+      debugDocumentVersioning = "YES"
+      askForAppToLaunch = "Yes"
+      launchAutomaticallySubstyle = "2">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "7C8C5F4C2BAF0AD100C4FBD2"
-            BuildableName = "Helldivers Companion Major Order Watch WidgetExtension.appex"
-            BlueprintName = "Helldivers Companion Major Order Watch WidgetExtension"
+            BlueprintIdentifier = "7C0C99472BA2BA8F00CF7C91"
+            BuildableName = "Helldivers Companion.app"
+            BlueprintName = "Helldivers Companion"
             ReferencedContainer = "container:Helldivers Companion.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
